--- a/frontend/src/app/pacientes/formulario/documentos/paciente-form-documentos.component.html
+++ b/frontend/src/app/pacientes/formulario/documentos/paciente-form-documentos.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g ui-fluid" [formGroup]="formGroup">
     <div class="ui-g-12" formGroupName="documento">
-        <div nInputText label="Número da Identidades" formControlName="numeroDaIdentidade" class="ui-g-3 ui-sm-12"></div>
+        <div nInputText label="Número da Identidade" formControlName="numeroDaIdentidade" class="ui-g-3 ui-sm-12"></div>
         <div nAutoComplete [service]="orgaoEmissorService" field="valor" formControlName="orgaoEmissorId" label="Órgão Emissor" class="ui-g-3 ui-sm-12"></div>
         <div nAutoComplete [service]="ufService" field="sigla" formControlName="ufId" label="UF" class="ui-g-2 ui-sm-12"></div>
         <div madreCalendar label="Data de Emissão" formControlName="data" class="ui-g-2 ui-sm-12"></div>
